@@ -20,6 +20,9 @@
 #if defined(TARGET_amd64) && defined (SYS_linux)
 #define _GNU_SOURCE
 #endif
+#if defined(TARGET_i386) && defined (SYS_linux_elf)
+#define _GNU_SOURCE
+#endif
 #include <signal.h>
 #include <errno.h>
 #include <stdio.h>
